--- a/AutoRest/Generators/Java/Java/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ServiceClientTemplate.cshtml
@@ -20,7 +20,7 @@ import retrofit.RestAdapter;
 /**
  * Initializes a new instance of the @Model.Name class.
  */
-public class @(Model.Name)Impl extends ServiceClient<@Model.Name> implements @Model.Name {
+public class @(Model.Name)Impl extends ServiceClient implements @Model.Name {
     private String baseUri;
 @EmptyLine
     /**
