--- a/AutoRest/Generators/Java/Java/Templates/MethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/MethodGroupTemplate.cshtml
@@ -14,54 +14,33 @@ import com.microsoft.rest.ServiceException;
 import com.microsoft.rest.ServiceResponse;
 import com.microsoft.rest.ServiceResponseBuilder;
 import com.microsoft.rest.ServiceResponseCallback;
-import retrofit.client.Response;
 import retrofit.RestAdapter;
 import retrofit.RetrofitError;
-@foreach (var importClass in Model.Imports)
+import retrofit.client.Response;
+@foreach (var importClass in Model.ImplImports)
 {
 @:import @importClass;
 }
 @EmptyLine
 
-public class @Model.MethodGroupType {
+public class @(Model.MethodGroupType)Impl implements @Model.MethodGroupType {
     private @Model.MethodGroupServiceType service;
     @EmptyLine
-    public @(Model.MethodGroupType)(RestAdapter restAdapter) {
+    public @(Model.MethodGroupType)Impl(RestAdapter restAdapter) {
         service = restAdapter.create(@(Model.MethodGroupServiceType).class);
     }
     @EmptyLine
 
-    public interface @Model.MethodGroupServiceType {
-    @foreach (var method in Model.MethodTemplateModels)
-    {
-    @:    @@@(method.HttpMethod.ToString().ToUpper())("@(method.Url)")
-    @:    Response @(method.Name)(@method.MethodParameterApiDeclaration) throws ServiceException;
-    @EmptyLine
-    @:    @@@(method.HttpMethod.ToString().ToUpper())("@(method.Url)")
-    @:    void @(method.Name)Async(@method.MethodParameterApiDeclarationWithCallback);
-    @EmptyLine
-    }
-    }
-
     @foreach (var method in Model.MethodTemplateModels)
     {
     @:public @method.ReturnTypeString @(method.Name)(@method.MethodParameterDeclaration) throws ServiceException {
-    if (method.ReturnType != null)
-    {
     @:    try {
-    @:        return @(method.Name)Delegate(service.@(method.Name)(@method.MethodParameterInvocation), null).getBody();
+    @:        ServiceResponse<@method.GenericReturnTypeString> response = @(method.Name)Delegate(service.@(method.Name)(@method.MethodParameterInvocation), null);
+    @:        @method.ReturnStatement
     @:    } catch (RetrofitError error) {
-    @:        return @(method.Name)Delegate(error.getResponse(), error).getBody();
+    @:        ServiceResponse<@method.GenericReturnTypeString> response = @(method.Name)Delegate(error.getResponse(), error);
+    @:        @method.ReturnStatement
     @:    }
-    }
-    else
-    {
-    @:    try {
-    @:        @(method.Name)Delegate(service.@(method.Name)(@method.MethodParameterInvocation), null).getBody();
-    @:    } catch (RetrofitError error) {
-    @:        @(method.Name)Delegate(error.getResponse(), error).getBody();
-    @:    }
-    }
     @:}
     @EmptyLine
     @:public void @(method.Name)Async(@method.MethodParameterDeclarationWithCallback) {
@@ -81,11 +60,11 @@ public class @Model.MethodGroupType {
     @:    return new ServiceResponseBuilder<@method.GenericReturnTypeString>()
                 foreach (var response in method.Responses)
                 {
-                @:.register(@((int)response.Key), new TypeToken<@JavaCodeNamer.NormalizeGenericType(response.Value).Name>(){}.getType())
+                @:.register(@((int)response.Key), new TypeToken<@JavaCodeNamer.WrapPrimitiveType(response.Value).Name>(){}.getType())
                 }
                 if (method.DefaultResponse != null)
                 {
-                @:.registerError(new TypeToken<@(JavaCodeNamer.NormalizeGenericType(method.DefaultResponse).Name)>(){}.getType())
+                @:.registerError(new TypeToken<@(JavaCodeNamer.WrapPrimitiveType(method.DefaultResponse).Name)>(){}.getType())
                 }
                 @:.build(response, error);
     @:}
