Added utf-8 comment to each ruby file to support ruby 1.9.

--- a/AutoRest/Generators/Ruby/Azure.Ruby/Templates/AzureMethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Azure.Ruby/Templates/AzureMethodGroupTemplate.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.Rest.Generator.Azure.Ruby.Templates
 @using Microsoft.Rest.Generator.Azure.Ruby
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Azure.Ruby.AzureMethodGroupTemplateModel>
+# encoding: utf-8
 @Header("# ")
 @EmptyLine
 module @Settings.Namespace
