--- a/AutoRest/Generators/Ruby/Ruby/Templates/EnumTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/EnumTemplate.cshtml
@@ -1,4 +1,5 @@
 ﻿@inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Ruby.EnumTemplateModel>
+# encoding: utf-8
 @Header("# ")
 @EmptyLine
 module @Settings.Namespace
