--- a/AutoRest/Generators/Ruby/Ruby/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/ModelTemplate.cshtml
@@ -3,6 +3,7 @@
 @using Microsoft.Rest.Generator.ClientModel
 @using Microsoft.Rest.Generator.Ruby.TemplateModels
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Ruby.ModelTemplateModel>
+# encoding: utf-8
 @Header("# ")
 @EmptyLine
 module @(Settings.Namespace)
