--- a/AutoRest/Generators/Ruby/Ruby/Templates/RequirementsTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/RequirementsTemplate.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.Rest.Generator.Ruby
 @using Microsoft.Rest.Generator.Ruby.Templates
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Ruby.RequirementsTemplateModel>
+# encoding: utf-8
 @Header("# ")
 @EmptyLine
 @Model.GetDependencyGems()
