--- a/AutoRest/Generators/Ruby/Ruby/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/ServiceClientTemplate.cshtml
@@ -4,6 +4,7 @@
 @using System.Linq
 @using Microsoft.Rest.Generator.Ruby.TemplateModels
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Ruby.ServiceClientTemplateModel>
+# encoding: utf-8
 @Header("# ")
 @EmptyLine
 module @Settings.Namespace
