--- a/AutoRest/Generators/Ruby/Ruby/Templates/MethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/MethodGroupTemplate.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.Rest.Generator.Ruby
 @using Microsoft.Rest.Generator.Ruby.Templates
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Ruby.MethodGroupTemplateModel>
+# encoding: utf-8
 @Header("# ")
 @EmptyLine
 module @Settings.Namespace
