--- a/AutoRest/Generators/Java/Java/Templates/ServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ServiceClientInterfaceTemplate.cshtml
@@ -10,6 +10,10 @@
 
 package @(Settings.Namespace.ToLower());
 @EmptyLine
+@if (Settings.AddCredentials)
+{
+@:import com.microsoft.rest.credentials.ServiceClientCredentials;
+}
 @foreach (var importClass in Model.InterfaceImports)
 {
 @:import @importClass;
@@ -25,6 +29,11 @@ public interface @Model.Name {
      * @@return The BaseUri value.
      */
     String getBaseUri();
+@if (Settings.AddCredentials)
+{
+@EmptyLine
+@:    void setCredentials(ServiceClientCredentials credentials);
+}
 @foreach (var param in Model.Properties)
 {
 @EmptyLine
